--- a/css/styles.css
+++ b/css/styles.css
@@ -4,14 +4,19 @@
 body {
 
     background-color: #1C1C1C;
+    background-image: url(../images/background.jpg);
+    background-position: top center;
+    background-repeat: no-repeat;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+    height: 600px;
 
 }
 
 #container {
 
     margin: 64px auto 0 auto;
-    background: #1F2937;
+    background: #15293b;
     width: 550px;
     height: 550px;
     border-radius: 10%;
@@ -33,12 +38,15 @@ button {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    font-weight: 700;
+    border-radius: 3%;
 
 }
 
 button:hover {
 
     background-color: #035f3d;
+    color: gray;
 
 }
 
