--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 /* CSS Document */
 
+
 body {
 
     background-color: #1C1C1C;
@@ -9,61 +10,218 @@ body {
     background-repeat: no-repeat;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
-    height: 600px;
+}
+
+/***** 
+
+MOBILE VIEW
+
+******/
+@media only screen and (max-width: 600px) {
+
+    body {
+
+        height: 600px;
+
+    }
+
+
+    #container {
+
+        margin: 32px auto 0 auto;
+        background: #15293b;
+        width: 300px;
+        height: 300px;
+        border-radius: 10%;     
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+    }
+
+    button {
+
+        background-color: #04AA6D;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        font-weight: 700;
+        border-radius: 3%;
+
+    }
+
+    button:hover {
+
+        background-color: #035f3d;
+        color: gray;
+
+    }
+
+    h1 {
+
+        text-align: center;
+        font-size: 24px;
+        margin-top: 0px;
+        color: #fff;
+
+    }
+
+    h2 {
+
+        text-align: center;
+        font-size: 24px;
+        margin-top: 0px;
+        color: #fff;
+
+    }
 
 }
 
-#container {
+/***** 
 
-    margin: 64px auto 0 auto;
-    background: #15293b;
-    width: 550px;
-    height: 550px;
-    border-radius: 10%;
+TABLET VIEW
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+******/
+@media only screen and (max-width: 980px) and (min-width: 600px) {
+
+    body {
+
+        height: 600px;
+
+    }
+
+
+    #container {
+
+        margin: 64px auto 0 auto;
+        background: #15293b;
+        width: 550px;
+        height: 550px;
+        border-radius: 10%;     
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+    }
+
+    button {
+
+        background-color: #04AA6D;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        font-weight: 700;
+        border-radius: 3%;
+
+    }
+
+    button:hover {
+
+        background-color: #035f3d;
+        color: gray;
+
+    }
+
+    h1 {
+
+        text-align: center;
+        font-size: 40px;
+        margin-top: 0px;
+        color: #fff;
+
+    }
+
+    h2 {
+
+        text-align: center;
+        font-size: 40px;
+        margin-top: 0px;
+        color: #fff;
+
+    }
 
 }
 
-button {
+/****** 
 
-    background-color: #04AA6D;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    font-weight: 700;
-    border-radius: 3%;
+DESKTOP VIEW
 
-}
+******/
+@media only screen and (min-width: 980px) {
 
-button:hover {
+    body {
 
-    background-color: #035f3d;
-    color: gray;
+        height: 600px;
 
-}
+    }
 
-h1 {
 
-    text-align: center;
-    font-size: 40px;
-    margin-top: 0px;
-    color: #fff;
+    #container {
 
-}
+        margin: 64px auto 0 auto;
+        background: #15293b;
+        width: 550px;
+        height: 550px;
+        border-radius: 10%;     
 
-h2 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
 
-    text-align: center;
-    font-size: 40px;
-    margin-top: 0px;
-    color: #fff;
+    }
+
+    button {
+
+        background-color: #04AA6D;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        font-weight: 700;
+        border-radius: 3%;
+
+    }
+
+    button:hover {
+
+        background-color: #035f3d;
+        color: gray;
+
+    }
+
+    h1 {
+
+        text-align: center;
+        font-size: 40px;
+        margin-top: 0px;
+        color: #fff;
+
+    }
+
+    h2 {
+
+        text-align: center;
+        font-size: 40px;
+        margin-top: 0px;
+        color: #fff;
+
+    }
+
 
 }
